# ReadSync-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_endpoints.py
.github/workflows/: deploy.yml
src/app/: lifespan.py  main.py
src/app/api/: dep.py
src/app/api/v1/: api.py
src/app/api/v1/endpoint/: chat.py  embedding.py  tts.py
src/app/core/: config.py
src/app/domain/book/: schema.py  service.py
src/app/domain/tts/service/: luxia_tts_service.py  tts_service.py
test/: test_recursive_files.py  test_soy_test.py
